[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Scenes/Map/LevelButtonNotCompleted.tres" type="StyleBox" id=1]
[ext_resource path="res://assets/Sprites/SelectionIndicator.png" type="Texture" id=2]
[ext_resource path="res://src/Scenes/Map/LevelButton.gd" type="Script" id=3]

[node name="Button" type="Button"]
margin_right = 21.0
margin_bottom = 20.0
rect_min_size = Vector2( 32, 32 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_top = -30.1682
margin_right = 32.0
margin_bottom = 1.83183
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 2 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="." to="." method="_on_Button_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_Button_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_Button_pressed"]
